force-app/main/default/objects/Notification__c/Notification__c.object-meta.xml
<CustomObject>
  <label>Notification</label>
  <pluralLabel>Notifications</pluralLabel>
  <nameField>
    <type>AutoNumber</type>
    <label>Notification Number</label>
    <displayFormat>NTF-{00000}</displayFormat>
  </nameField>
  <sharingModel>Private</sharingModel>
</CustomObject>