force-app/main/default/objects/Notification__c/fields/Is_Read__c.field-meta.xml
<CustomField>
    <fullName>Is_Read__c</fullName><label>Read</label><type>Checkbox</type><defaultValue>false</defaultValue>
</CustomField>