force-app/main/default/objects/Notification__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName><label>Message</label><type>LongTextArea</type><visibleLines>3</visibleLines><length>10000</length>
</CustomField>