force-app/main/default/objects/Notification__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName><label>Recipient</label><type>Lookup</type><referenceTo>Contact</referenceTo><relationshipName>Notifications</relationshipName>
</CustomField>