force-app/main/default/objects/Notification__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName><label>Related Record ID</label><type>Text</type><length>18</length>
</CustomField>