force-app/main/default/objects/Notification__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName><label>Type</label><type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Email</fullName><default>false</default></value>
        <value><fullName>SMS</fullName><default>false</default></value>
        <value><fullName>Push</fullName><default>false</default></value>
        <value><fullName>In-App</fullName><default>false</default></value>
    </valueSetDefinition></valueSet>
</CustomField>